--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
             text-align: center;
         }
         .profile p {
-            font-size: 16px;
+            font-size: 24px; /* Tăng kích thước font chữ */
             line-height: 1.5;
+            margin: 0; /* Loại bỏ khoảng cách giữa các dòng */
+            padding: 5px 0; /* Thêm khoảng cách giữa các dòng */
         }
         .icons {
             font-size: 24px;
@@ -102,14 +104,6 @@
             }
             .video-container {
                 height: 200px;
-            }
-            /* Tăng kích thước chữ và căn giữa thẳng hàng cho thiết bị di động */
-            .profile p {
-                font-size: 18px;
-                text-align: center;
-            }
-            .button {
-                font-size: 18px;
             }
         }
     </style>
