--- a/index.html
+++ b/index.html
@@ -70,7 +70,12 @@
     </code></pre>
     <button class="copy-button" onclick="copyCode(this)">Sao chép</button>
 </div>
+<div class="code-box">
+        <pre class="wp-block-code"><code class="">
+pkg insttall git && pkg install python && git clone https://github.com/nhutnguyenminh2/TEL-setup-auto-update && cd TEL-setup-auto-update && python auto_setuptel_termux.py</code></pre>
+       <button class="copy-button" onclick="copyCode(this)">Sao chép</button>
 
+    </div>
 <style>
     /* Màu cho các loại mã code */
     .keyword {
@@ -97,6 +102,8 @@
         color: white; /* Màu chữ trắng */
     }
 </style>
+  
+  
 
     <!-- ... (Thêm các khung mã code khác nếu cần) -->
 
@@ -158,6 +165,8 @@
             button.textContent = 'Đã sao chép';
             button.disabled = true;
         }
+      
+      
     </script>
 </body>
 </html>
