--- a/index.html
+++ b/index.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="vi">
 <head>
-    <meta charset="UTF-8">
-    <title>Giới thiệu cá nhân</title>
-    <style>
-        /* CSS cho điện thoại (độ phân giải nhỏ hơn 768px) */
-        @media (max-width: 767px) {
-            /* Thay đổi kích thước font chữ cho thiết bị di động */
-            body {
-                font-size: 18px;
-            }
-
-            /* Đảm bảo nội dung đầy đủ hiển thị trên điện thoại */
-            .profile p {
-                word-wrap: break-word;
-            }
-
-            /* Di chuyển nút sao chép lên trên bên trái của khung sao chép */
-            .copy-button {
-                float: left;
-                margin: 0;
-            }
-        }
-
-        /* ... (Thêm CSS tùy chỉnh cho các thiết bị khác nếu cần) */
-      
-        /* ... (CSS của bạn ở đây) */
-      /* CSS để tạo khung đen cho mã */
+<meta http-equiv="content-type" content="text/html;charset=utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta http-equiv="x-ua-compatible" content="ie=edge">
+<title>NhutGG SHARE VPN</title>
+<meta name="author" content="nhutgg">
+<meta name="description" content="VPN">
+<meta property="og:image:alt" content="https://cdn.bio.link/uploads/profile_pictures/2023-09-18/TLCYdyxx3SjtHUEC3QC7P91yhWjzZ4Fh.png">
+<meta property="og:image" content="https://cdn.bio.link/uploads/profile_pictures/2023-09-18/TLCYdyxx3SjtHUEC3QC7P91yhWjzZ4Fh.png">
+<meta property="og:type" content="website">
+<meta property="og:title" content="FILE UPDATE VPN 4G">
+<meta property="og:description" content="VPN 4G">
+<link href="https://cdn.bio.link/uploads/profile_pictures/2023-09-18/TLCYdyxx3SjtHUEC3QC7P91yhWjzZ4Fh.png" rel="icon" type="image/x-icon">
+<link href="https://cdn.bio.link/uploads/profile_pictures/2023-09-18/TLCYdyxx3SjtHUEC3QC7P91yhWjzZ4Fh.png" rel="icon" sizes="192x192">
+<link href="https://cdn.bio.link/uploads/profile_pictures/2023-09-18/TLCYdyxx3SjtHUEC3QC7P91yhWjzZ4Fh.png" rel="apple-touch-icon">
+<link rel="stylesheet" href="https://nhutnguyenminh2.github.io/static/css/gg1.css">
+<link rel="stylesheet" href="https://nhutnguyenminh2.github.io/static/css/gg2.css">
+<link rel="stylesheet" href="https://nhutnguyenminh2.github.io/static/css/gg3.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+<script src="https://nhutnguyenminh2.github.io/static/js/main.js"></script>
+<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css">
+<script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<style>
+  /* CSS để tạo khung đen cho mã */
         .code-box {
             background-color: #000;
             padding: 10px;
@@ -35,27 +39,48 @@
             color: #fff;
             transition: background-color 0.3s ease-in-out;
         }
+  #userIP {
+    text-align: center;
+    margin-top: 20px;
+}
 
-        /* Nút sao chép */
-        .copy-button {
-            background-color: #f2f2f2;
-            color: #000;
-            border: none;
-            border-radius: 5px;
-            padding: 5px 10px;
-            cursor: pointer;
-            transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+		body {
+			display: none;
+		}
+		/* CSS để căn giữa video */
+        .video-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 400px; /* Điều chỉnh chiều cao của video theo nhu cầu */
         }
-
-        /* Màu khi sao chép thành công */
-        .success {
-            background-color: #4CAF50 !important;
-            color: white !important;
-            transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out !important;
+        .video-container iframe {
+            max-width: 100%;
+            max-height: 100%;
         }
-    </style>
+	</style>
 </head>
-<body>
+<body style="display: block;">
+<nav class="navbar navbar-vertical navbar-vertical-sm fixed-start navbar-expand-md navbar-light" id="sidebarSmall" style="display: none !important"></nav>
+<nav class="navbar navbar-expand-lg navbar-light" id="topnav" style="display: none;"></nav>
+<div class="main-content">
+<div class="header"></div>
+<div class="container-fluid">
+<div class="row" style="margin-bottom: 35px;">
+<div class="col-lg-12">
+<div class="anhdaidien">
+<img class="anhdaidien2" src="https://cdn.bio.link/uploads/profile_pictures/2023-09-18/TLCYdyxx3SjtHUEC3QC7P91yhWjzZ4Fh.png">
+</div>
+<div class="tmanh_profile">
+<h1 style="margin-bottom: -10px;">SHARE FILE 4G VPN</h1>
+</div>
+
+
+<p></p>
+<div class="card-header text-center">
+<h2 class="h2-vip" style="color: blue"><img src="https://cdn.bio.link/uploads/thumbnails/2023-09-25/fan13mLV7czMjSA85G80SYvOZsdP6HPc.png" /> Thông Tin VPN 4G</h2>
+</div>
+  
   <div class="profile">
         <h1>Thông tin cá nhân</h1>
         <p>Tên: Tên Của Bạn</p>
@@ -120,7 +145,7 @@ pkg insttall git && pkg install python && git clone https://github.com/nhutnguye
     </footer>
 
     <!-- ... (Thêm các khung mã code khác nếu cần) -->
-  
+  <p id="userIP">Địa chỉ IP của bạn sẽ xuất hiện ở đây.</p>
     <script>
        function copyBankAccount() {
             var bankAccount = document.createElement("textarea");
@@ -163,6 +188,20 @@ pkg insttall git && pkg install python && git clone https://github.com/nhutnguye
             button.textContent = 'Đã sao chép';
             button.disabled = true;
         }
+      // Đợi cho trang web được tải hoàn toàn
+window.addEventListener('load', () => {
+    // Lấy địa chỉ IP của người truy cập sử dụng một dịch vụ API miễn phí
+    fetch('https://api.ipify.org?format=json')
+        .then(response => response.json())
+        .then(data => {
+            // Lấy địa chỉ IP từ dữ liệu API và hiển thị nó
+            const userIP = data.ip;
+            document.getElementById('userIP').textContent = `Địa chỉ IP của bạn: ${userIP}`;
+        })
+        .catch(error => {
+            console.error('Lỗi khi lấy địa chỉ IP:', error);
+        });
+});
     </script>
 </body>
 </html>
