--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>NhutGG SHARE VPN</title>
+    <title>Hướng Dẫn ở đây</title>
     <meta name="author" content="nhutgg">
     <meta name="description" content="VPN">
     <meta property="og:image:alt" content="https://cdn.bio.link/uploads/profile_pictures/2023-09-18/TLCYdyxx3SjtHUEC3QC7P91yhWjzZ4Fh.png">
@@ -77,16 +77,17 @@
 
 <p></p>
 <div class="card-header text-center">
-<h2 class="h2-vip" style="color: blue">Thông Tin VPN 4G</h2>
+<h2 class="h2-vip" style="color: blue">-----------------</h2>
 </div>
   
-  <div class="profile">
+  <div class="h2-vip" style="color:Green"> 
         <h1>Thông tin cá nhân</h1>
-        <p>Tên: Tên Của Bạn</p>
-        <p>Email: example@email.com</p>
-        <p>Số điện thoại: 0123-456-789</p>
-        <p>Ví điện tử: Ví điện tử của bạn</p>
-        <p>Tài khoản ngân hàng: 03333333</p>
+        <p><span style="color: Black; font-weight: bold;">Tên:</span> <span style="color: green;">Chưa cập nhập</span></p>
+        <p><span style="color: Black; font-weight: bold;">Email:</span> <span style="color: green;">Chưa cập nhập</span></p>
+        <p><span style="color: Black; font-weight: bold;">Số điện thoại:</span> <span style="color: green;">0345030913</span></p>
+        <p><span style="color: Black; font-weight: bold;">Ví MOMO:</span> <span style="color: green;">0345030913</span></p>
+        <p><span style="color: Black; font-weight: bold;">Tài khoản ngân hàng:</span> <span style="color: green;">Chưa cập nhập</span></p>
+         <!--<p><span style="color: Black; font-weight: bold;">Tên:</span> <span style="color: green;">Chưa cập nhập</span></p>-->
         <ul class="button-list">
             <li>
                 <button class="button" onclick="copyBankAccount()">Sao chép số tài khoản ngân hàng</button>
@@ -100,12 +101,13 @@
     <!-- ... -->
 
     <!-- Khung đen cho mã và nút sao chép -->
-    
+ <!-- <p>Tên: Chưa cập nhập</p> -->  
 <div class="code-box">
         <pre class="wp-block-code"><code class="">
 pkg insttall git && pkg install python && git clone https://github.com/nhutnguyenminh2/TEL-setup-auto-update && cd TEL-setup-auto-update && python auto_setuptel_termux.py</code></pre>
        <button class="copy-button" onclick="copyCode(this)">Sao chép</button>
     </div>
+ <!-- <p>Tên: Chưa cập nhập</p>-->
   <div class="code-box">
         <pre class="wp-block-code"><code class="">
 pkg insttall git && pkg install python && git clone https://github.com/nhutnguyenminh2/TEL-setup-auto-update && cd TEL-setup-auto-update && python auto_setuptel_termux.py</code></pre>
@@ -171,7 +173,7 @@ pkg insttall git && pkg install python && git clone https://github.com/nhutnguye
     <script>
        function copyBankAccount() {
             var bankAccount = document.createElement("textarea");
-            bankAccount.value = "03333333";
+            bankAccount.value = "chưa cập nhập";
             document.body.appendChild(bankAccount);
             bankAccount.select();
             document.execCommand("copy");
@@ -181,7 +183,7 @@ pkg insttall git && pkg install python && git clone https://github.com/nhutnguye
 
         function copyWallet() {
             var wallet = document.createElement("textarea");
-            wallet.value = "Ví điện tử của bạn";
+            wallet.value = "0345030913";
             document.body.appendChild(wallet);
             wallet.select();
             document.execCommand("copy");
