--- a/index.html
+++ b/index.html
@@ -265,10 +265,10 @@
 <p class="drop-title">Thông Tin Chuyển Khoản</p>
 <div id="link-box">
     <div class="link-item">
-        <div class="bio-story-thumb" style="background-image: url('https://cdn.glitch.global/e751d0a4-1c8b-4509-bc52-77c5508cdc15/facebook.jpg?v=1696429705889');"></div>
+        <div class="bio-story-thumb" style="background-image: url('https://raw.githubusercontent.com/nhutnguyenminh2/test-dev/main/img/mbbank.png');"></div>
         <div class="link-content">
             <p>MB Bank</p>
-            <span id="mbBankInfo">912 01234 99999</span>
+            <span id="mbBankInfo">chưa cập nhập</span>
         </div>
         <div class="link-btn">
             <div class="link-btn-chill light-blue" onclick="copyToClipboard('mbBankInfo', this)">COPY</div>
@@ -276,7 +276,7 @@
     </div>
 
     <div class="link-item">
-        <div class="bio-story-thumb" style="background-image: url('https://cdn.glitch.global/e751d0a4-1c8b-4509-bc52-77c5508cdc15/momogg.png?v=1696481051519');"></div>
+        <div class="bio-story-thumb" style="background-image: url('https://raw.githubusercontent.com/nhutnguyenminh2/test-dev/main/img/momogg.png');"></div>
         <div class="link-content">
             <p>Ví MOMO</p>
             <span id="momoInfo">0345030913</span>
@@ -287,7 +287,7 @@
     </div>
 
     <div class="link-item">
-        <div class="bio-story-thumb" style="background-image: url('https://cdn.glitch.global/e751d0a4-1c8b-4509-bc52-77c5508cdc15/paypalgg.png?v=1696481057135');"></div>
+        <div class="bio-story-thumb" style="background-image: url('https://raw.githubusercontent.com/nhutnguyenminh2/test-dev/main/img/paypalgg.png');"></div>
         <div class="link-content">
             <p>PAYPAL</p>
             <span id="paypalInfo" class="hidden-text">https://www.paypal.com/paypalme/nhutnguyenminh2</span>
