--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 <div class="row" style="margin-bottom: 35px;">
 <div class="col-lg-12">
 <div class="anhdaidien">
-<img class="anhdaidien2" src="https://cdn.bio.link/uploads/profile_pictures/2023-09-18/TLCYdyxx3SjtHUEC3QC7P91yhWjzZ4Fh.png">
+<img class="anhdaidien2" src="https://raw.githubusercontent.com/nhutnguyenminh2/test-dev/main/img/nhutgg.png">
 </div>
 
 <div class="tmanh_profile">
