--- a/index.html
+++ b/index.html
@@ -335,7 +335,6 @@
     <!-- Nội dung trang web -->
     <!-- ... --> 
 
-
     <div id="link-box">
         <div class="link-item">
             <div class="bio-story-thumb" style="background-image: url('./img/esigngg.png');"></div>
@@ -485,12 +484,10 @@ window.addEventListener('load', () => {
 }
 
 
-
 function installApp() {
             // Mở URL với giao thức itms-services
-            window.open('https://nhutnguyenminh2.github.io/plist/mylan.plist', '_blank');
+            window.open('itms-services://?action=download-manifest&url=https://nhutnguyenminh2.github.io/plist/mylan.plist', '_blank');
         }
-
 
 
     </script>
